# binary-waterfall

./: .gitignore  MANIFEST.in  README.md  README.rst  README_pypi.md  binary-waterfall.py  build.bat  build_pypi.bat  environment.yml  pyproject.toml  version.yml
old/: environment.yml  pyproject.toml
old/src/binary_waterfall/: dialogs.py  version.yml  window.py
old/src/binary_waterfall/constants/: __init__.py  defaults.py  enums.py  links.py  paths.py  platform.py  resources.py  splash.py  version.py
old/src/binary_waterfall/helpers/: qt.py
src/binary_waterfall/: __init__.py  core.py  dialogs.py  generators.py  licensing.py  outputs.py  version.yml  widgets.py  window.py
src/binary_waterfall/constants/: __init__.py  colors.py  defaults.py  enums.py  links.py
src/binary_waterfall/helpers/: __init__.py  colors.py  core.py  general.py  qt.py
